--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-don't innovate, amputate!
+a 2-player iPad game
 
-http://metalab.at/wiki/Super_Gamedev_Weekend
+based on the sparrow framework [http://www.sparrow-framework.org/]
+
+made initially for http://metalab.at/wiki/Super_Gamedev_Weekend
